dns: add CIDR reverse DNS IPv4 entries to dnsmasq

When a reverse DNS entry must be added to dnsmasq, instead of
considering IP addresses as classful use the prefix to compute one or
more "in-addr.arpa" according to CIDR rules.

https://bugzilla.gnome.org/show_bug.cgi?id=767174
(cherry picked from commit 4d1e7dc23c3cad10aacee1f585f33ca159e5724a)